tests/NormalTests/paczka2/big_fuzzy/70674505.err
Error in line 6: 2A5O A524 17,5
Error in line 11: 7ctp3u A695 4,0
Error in line 16: VKLQ66ex A524 -3,2
Error in line 19: i2xzn S29 70,6
Error in line 21: 7ctp3u S29 97,3
Error in line 22: i2xzn A524 46,3
Error in line 15: VKLQ66ex A524 46,4
Error in line 27: i2xzn S29 51,1
Error in line 64: 2A5O A695 37,7
Error in line 67: A695 A695 90,2
Error in line 69: 2A5O A461 85,7
Error in line 83: 2A5O S29 58,4
Error in line 66: G8lAvo A524 36,4
Error in line 88: VKLQ66ex A524 3,74
Error in line 87: i2xzn A524 207,6
Error in line 90: i2xzn A461 37,6
Error in line 98: i2xzn A524 440,52
Error in line 74: 7ctp3u S29 70,0
Error in line 100: 7ctp3u A695 14,3
Error in line 104: thILlPkOO S29 66,1
Error in line 120: thILPkOO A695 15,8
Error in line 118: 7ctp3u S29 71,5
Error in line 97: i2xzn A524 95,9
Error in line 116: A695 A461 99,2
Error in line 138: 7ctp3u S29 59,3
Error in line 121: VKLQ66ex A524 40,7
Error in line 133: i2xzn A461 434,2
Error in line 153: thILlPkOO A461 38,24
Error in line 151: G8lAvo A695 72,9
Error in line 142: 7ctp3u A695 76,9
Error in line 165: i2xzn A695 2,1
Error in line 154: G8lAvo A461 80,3
Error in line 166: i2xzn A524 66,5
Error in line 160: 7ctp3u A461 22,5
Error in line 171: 7ctp3u A524 98,4
Error in line 170: i2xzn S29 73,3
Error in line 174: i2xzn A524 17,2
Error in line 179: 2A5O A461 14,1
Error in line 119: thILlPkOO A695 88,0
Error in line 182: G8lAvo S29 52,2
Error in line 197: VKLQ66ex S29 114,2
Error in line 187: thILlPkOO A461 143,6
Error in line 204: VKLQ66ex A524 47,6
Error in line 198: 2A5O A524 92,6
Error in line 202: G8lAvo A695 121,6
Error in line 210: 2A5O S29 58,3
Error in line 237: G8lAvo S29 45,8
